<resources>
    <string name="app_name">Unload</string>
    <string name="about_text">
        Stop calling Transport companies every day.
        \'Unload\' will reach you with several loading options.<br/>

        At the same time, it is easy to track your vehicles always.<br/>

        To know more about, please visit us at
        www.unload.co.in</string>

    <string name="settings_url_default_value" translatable="false">http://unload.co.in:5055</string>

    <string name="status_location_update">Location update</string>
    <string name="status_connectivity_change">Connectivity change</string>
    <string name="status_send_fail">Send failed</string>

    <string name="status_service_destroy">Service Stopped</string>
    <string name="status_service_create">Service Started</string>
    <string name="settings_status_on_summary">Service running</string>

    <!-- Strings related to Settings page. -->
    <string name="setting_url">URL</string>
    <string name="setting_interval">Interval</string>
    <string name="setting_distance">Distance</string>
    <string name="setting_angle">Angle</string>

    <!-- Strings related to User Mode -->
    <string name="radio_owner">Owner</string>
    <string name="radio_driver">Driver</string>
    <string name="btn_display">Submit</string>

    <string name="vehicle_submit">Submit</string>

    <!-- load -->
    <string name="settings_load_title">Load</string>
    <string name="settings_load_summary">Load Percentage</string>
    <string name="profile_phone">Phone Number</string>


    <!-- String related to Add Vehicle -->
    <string name="vehicle_tonnage">Max. Tonnage</string>
    <string name="vehicle_id">Vehicle Number</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="state">States</string>
    <string name="city">Cities</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_okay">Ok</string>

    <string-array name="vehicle_type_values" translatable="false">
        <item>Select Axle Type</item>
        <item>XL</item>
        <item>XXL</item>
        <item>XXXL</item>
    </string-array>

    <string-array name="vehicle_model_values" translatable="false">
        <item>Select Model</item>
        <item>Semi-Bed</item>
        <item>Low-Bed</item>
        <item>High-Bed</item>
        <item>10-Tyre</item>
        <item>DCM</item>
        <item>Tata-ACE</item>
    </string-array>

    <!-- Strings related to Menu -->
    <string name="menu_vehicles">Vehicles</string>
    <string name="menu_status">Status</string>
    <string name="menu_about">About</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">ReSend</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="start_phone_auth">Send OTP</string>
    <string name="menu_clear">Clear</string>
    <string name="confirm_text">Do you want to delete?</string>

    <string name="action_settings">Settings</string>
    <string name="user_mode_message">Are you Vehicle Owner or Driver?</string>
    <string name="vehicle_ton_unit">Ton</string>
    <string name="menu_delete_vehicle">Delete</string>

    <!-- FB Values -->
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

</resources>
