<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/user_mode_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="100dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="120dp">

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/user_mode_message"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioUserMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/radio_driver" />

            <RadioButton
                android:id="@+id/radioOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/radio_owner" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:weightSum="1">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/btn_display"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
