<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/phone_auth_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="100dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="100dp">

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:textSize="20sp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_verification_code"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <Button
                android:id="@+id/button_resend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1.0"
                android:background="@color/colorPrimary"
                android:text="@string/resend_phone_auth"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_verify_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1.0"
                android:background="@color/colorPrimary"
                android:text="@string/verify_phone_auth"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>