<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    tools:ignore="ContentDescription">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vehicleNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:paddingBottom="5dp"
            android:text="AP16TX3434"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/toggleLoadBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleNo" />

        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="Vijayawada, Andhra Pradesh (AP)"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/toggleLoadBtn"
            app:layout_constraintStart_toStartOf="@+id/vehicleNo"
            app:layout_constraintTop_toBottomOf="@+id/vehicleNo" />

        <ImageView
            android:id="@+id/toggleLoadBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_unloaded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tonnageIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_tonnage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationIcon" />

        <TextView
            android:id="@+id/tonnage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:minWidth="0dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="35 T"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tonnageIcon"
            app:layout_constraintTop_toTopOf="@+id/tonnageIcon" />

        <TextView
            android:id="@+id/axle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:minWidth="0dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="XXXL"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tonnage"
            app:layout_constraintTop_toTopOf="@+id/tonnage" />

        <TextView
            android:id="@+id/vehicleModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:maxLength="15"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="High bed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/axle"
            app:layout_constraintTop_toTopOf="@+id/axle" />


        <LinearLayout
            android:id="@+id/layout_expandable"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone"
            android:weightSum="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleModel">

            <Spinner
                android:id="@+id/state"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:prompt="@string/state"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/city"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:prompt="@string/city"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:weightSum="2.0">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1.0"
                    android:background="@color/colorSecondaryBtn"
                    android:text="@string/btn_cancel"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/submitLoad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1.0"
                    android:background="@color/colorPrimaryBtn"
                    android:text="@string/vehicle_submit"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>